--- a/Application.Web/Application.Web.csproj
+++ b/Application.Web/Application.Web.csproj
@@ -36,6 +36,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Areas\Admin\Views\Brand\_DeleteBrand.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\Admin\Views\Category\_DeleteCategory.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\Admin\Views\ProductAttribute\_DeleteProductAttribute.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Areas\Admin\Views\Shared\_GentelellaAdmin.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
